--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 </head>
 <style>
 
+    menu{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+
     p{
-        translate: 28px 0px;
         background: none;
         font-size: 28px;
         font-weight: 900;
@@ -16,32 +22,58 @@
         color: brown;
     }
 
-    .border{
-        position: relative;
-        top: -170px;
-        left: 45px;
-        text-align: center;
-        border: 0%;
-        border-radius: 5px;
-        margin: auto;
-        padding: .5em 2em;
-        background: none;
-    }
 
     a{
         text-decoration: none;
-        margin: 4%;
+        margin: 0% 5%;
         font-weight: 900;
         font-size: 20px;
     }
+
+    main{
+        text-align: center;
+    }
+
+    h1{
+        color: blue;
+        font-size: 35px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        text-align: right;
+    }
+
+    .h2{
+        border-top: dashed;
+    }
+
+    h2{
+        text-align: center;
+        padding: .5em;
+        border-bottom: dashed;
+        color: brown;
+        font-size: 12px;
+
+    }
 </style>
 <body>
-    <img src="TLY24 png.png" alt="" width="120px">
-    <p>LOGO</p>
-    <div class="border">
+    <menu>
+        <img src="TLY24 png.png" alt="" width="120px">
         <a href="">Home</a>
         <a href="">Trade</a>
         <a href="">About</a>
-    </div>
+    </menu>
+    <br>
+        <main>
+            <h1>Crypto</h1>
+            <h2 class="h2">ما الذي يمكنك شرائه باستخدام العملات المشفرة
+            كان المقصود من عملة بتكوين، عند إطلاقها لأول مرة، أن تكون وسيطًا للمعاملات اليومية، مما يتيح شراء كل شيء بدءًا من فنجان قهوة إلى جهاز كمبيوتر أو حتى السلع باهظة الثمن مثل العقارات. ولم يتحقق ذلك تمامًا، ورغم تزايد عدد المؤسسات التي تقبل العملات المشفرة، إلا أن المعاملات الكبيرة التي تُجرى باستخدامها نادرة. ومع ذلك، بمكن شراء مجموعة متنوعة من المنتجات من مواقع التجارة الإلكترونية باستخدام العملات المشفرة. وإليك بعض الأمثلة:</h2>
+            <h2>يقبل بعض تجار التجزئة لبيع السلع الفاخر العملات المشفرة كوسيلة للدفع. على سبيل المثال، تعرض متاجر التجزئة للسلع الفاخرة عبر الإنترنت Bitdials ساعات رولكس وباتيك فيليب وغيرها من الساعات الراقية مقابل البتكوين.</h2>
+            <h2>التأمين:
+
+                في أبريل 2021، أعلنت شركة التأمين السويسرية AXA أنها بدأت قبول بتكوين كوسيلة للدفع لجميع باقات التأمين باستثناء التأمين على الحياة (بسبب مشاكل تنظيمية). وتقبل شركة Premier Shield Insurance، التي تبيع بوالص التأمين على المنازل والتأمين على السيارات في الولايات المتحدة، بتكوين لدفع الأقساط.
+                
+                إذا كنت ترغب في إنفاق عملة مشفرة لدى بائع تجزئة لا يقبلها مباشرة، فيمكنك استخدام بطاقة خصم للعملات المشفرة، مثل BitPay في الولايات المتحدة.</h2>
+        </main>
+
+
 </body>
 </html>
