--- a/index.html
+++ b/index.html
@@ -3,15 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TLY24_TUBROK2024</title>
 </head>
 <style>
+
+
 
     menu{
         display: flex;
         justify-content: center;
         align-items: center;
     }
+
+
+    img{
+        translate: -80px 0;
+    }
+
 
 
     p{
@@ -24,6 +32,7 @@
 
 
     a{
+        translate: -18px;
         text-decoration: none;
         margin: 0% 3%;
         font-weight: 900;
@@ -57,9 +66,9 @@
 <body>
     <menu>
         <img src="TLY24 png.png" alt="" width="120px">
-        <a href="">Home</a>
-        <a href="">Trade</a>
-        <a href="">About</a>
+        <a href="">الــرئيسية</a>
+        <a href="">تـــداول</a>
+        <a href="">حـــول</a>
     </menu>
     <br>
         <main>
