--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <style>
 
 
+    body{
+        background: linear-gradient(360deg, #336, #333383, #335);
+    }
 
     menu{
         display: flex;
