--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         font-size: 28px;
         font-weight: 900;
         font-family: 'Courier New', Courier, monospace;
-        color: brown;
+        color: gold;
     }
 
 
@@ -40,6 +40,7 @@
         margin: 0% 3%;
         font-weight: 900;
         font-size: 20px;
+        color: silver;
     }
 
     main{
@@ -47,7 +48,7 @@
     }
 
     h1{
-        color: blue;
+        color: yellow;
         font-size: 35px;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         text-align: right;
@@ -61,7 +62,7 @@
         text-align: center;
         padding: .5em;
         border-bottom: dashed;
-        color: brown;
+        color: whitesmoke;
         font-size: 12px;
 
     }
