--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 <body>
     <menu>
         <img src="TLY24 png.png" alt="" width="120px">
-        <a href="">الــرئيسية</a>
-        <a href="">تـــداول</a>
-        <a href="">حـــول</a>
+        <a href="https://hellafi1992.github.io/c777/">الــرئيسية</a>
+        <a href="https://pancakeswap.finance/?outputCurrency=0x86D29104ea2C78cB124443dd21A664c712525C13">تـــداول</a>
+        <a href="https://hellafi1992.github.io/tly2024/">حـــول</a>
     </menu>
     <br>
         <main>
