--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
 
     img{
-        translate: -40px 0;
+        position: relative;
+        top: 0%;
+        left: -1.2em;
     }
 
 
@@ -35,20 +37,43 @@
 
 
     a{
-        translate: -22px;
+        translate: -30px;
         text-decoration: none;
         margin: 0% 3%;
         font-weight: 900;
-        font-size: 20px;
-        color: silver;
+        font-size: 27px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: rgb(246, 207, 110);
     }
 
+    a:active{
+        translate: -30px;
+        text-decoration: none;
+        margin: 0% 3%;
+        font-weight: 900;
+        font-size: 27px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: rgb(247, 10, 10);
+    }
     main{
         text-align: center;
     }
 
     h1{
-        color: yellow;
+        margin: auto;
+    }
+
+    .txt1{
+        color: gold;
+        font-size: 20px;
+        font-weight: 100;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        text-align: right;
+    }
+
+
+    .txt2{
+        color: rgb(246, 207, 110);
         font-size: 35px;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         text-align: right;
@@ -62,31 +87,45 @@
         text-align: center;
         padding: .5em;
         border-bottom: dashed;
-        color: whitesmoke;
+        color: wheat;
         font-size: 12px;
-
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
+
+
+    footer{
+        translate: 0 180px;
+        background: none;
+        text-align: center;
+        font-size: 22px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: 600;
+        color: tomato;
+    }
+
 </style>
 <body>
     <menu>
         <img src="TLY24 png.png" alt="" width="120px">
-        <a href="https://hellafi1992.github.io/c777/">الــرئيسية</a>
-        <a href="https://pancakeswap.finance/?outputCurrency=0x86D29104ea2C78cB124443dd21A664c712525C13">تـــداول</a>
         <a href="https://hellafi1992.github.io/tly2024/">حـــول</a>
+        <a href="https://pancakeswap.finance/?outputCurrency=0x86D29104ea2C78cB124443dd21A664c712525C13">تـــداول</a>
+        <a href="https://hellafi1992.github.io/c777/">الــرئيسية</a>
     </menu>
-    <br>
-        <main>
-            <h1>Crypto</h1>
-            <h2 class="h2">ما الذي يمكنك شرائه باستخدام العملات المشفرة
-            كان المقصود من عملة بتكوين، عند إطلاقها لأول مرة، أن تكون وسيطًا للمعاملات اليومية، مما يتيح شراء كل شيء بدءًا من فنجان قهوة إلى جهاز كمبيوتر أو حتى السلع باهظة الثمن مثل العقارات. ولم يتحقق ذلك تمامًا، ورغم تزايد عدد المؤسسات التي تقبل العملات المشفرة، إلا أن المعاملات الكبيرة التي تُجرى باستخدامها نادرة. ومع ذلك، بمكن شراء مجموعة متنوعة من المنتجات من مواقع التجارة الإلكترونية باستخدام العملات المشفرة. وإليك بعض الأمثلة:</h2>
-            <h2>يقبل بعض تجار التجزئة لبيع السلع الفاخر العملات المشفرة كوسيلة للدفع. على سبيل المثال، تعرض متاجر التجزئة للسلع الفاخرة عبر الإنترنت Bitdials ساعات رولكس وباتيك فيليب وغيرها من الساعات الراقية مقابل البتكوين.</h2>
-            <h2>التأمين:
 
-                في أبريل 2021، أعلنت شركة التأمين السويسرية AXA أنها بدأت قبول بتكوين كوسيلة للدفع لجميع باقات التأمين باستثناء التأمين على الحياة (بسبب مشاكل تنظيمية). وتقبل شركة Premier Shield Insurance، التي تبيع بوالص التأمين على المنازل والتأمين على السيارات في الولايات المتحدة، بتكوين لدفع الأقساط.
-                
-                إذا كنت ترغب في إنفاق عملة مشفرة لدى بائع تجزئة لا يقبلها مباشرة، فيمكنك استخدام بطاقة خصم للعملات المشفرة، مثل BitPay في الولايات المتحدة.</h2>
+    
+    <br>
+
+
+        <main>
+            <h1 class="txt1">تداول مع العملة </h1>
+            <h1 class="txt2">TLY24 / BNB</h1>
+            <br>
+            <br>
+            <h2>عملة جديدة اشتري وحافظ عليها  TLY24  اذا كنت ترغب في التداول اليك عملة</h2>
+            <h2>تابع اخبار الصفحة كل 9ساعات يتم تحديثها تلقائية</h2>
         </main>
 
 
+        <footer>TLY24 &copy; 2024</footer>
 </body>
 </html>
