--- a/index.html
+++ b/index.html
@@ -3,147 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TLY24_TUBROK2024</title>
+    <title>حمد اللافي</title>
 </head>
+
+
 <style>
 
-
     body{
-        width: auto;
-        height: auto;
-        --s: 200px; /* control the size */
-        --c1: #1d1d1d;
-        --c2: #4e4f51;
-        --c3: #3c3c3c;
-        background: repeating-conic-gradient(
-                from 30deg,
-                #0000 0 120deg,
-                var(--c3) 0 180deg
-            )
-            calc(0.5 * var(--s)) calc(0.5 * var(--s) * 0.577),
-            repeating-conic-gradient(
-            from 30deg,
-            var(--c1) 0 60deg,
-            var(--c2) 0 120deg,
-            var(--c3) 0 180deg
-            );
-            background-size: var(--s) calc(var(--s) * 0.577);
+        background: #333;
     }
 
+
     menu{
+        color: violet;
+        font-size: 40px;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        translate: -20px -30px;
+        background: none;
+        text-align: center;
+    }
+
+    .logo{
         display: flex;
         justify-content: center;
         align-items: center;
     }
 
 
-    img{
-        position: relative;
-        top: 0%;
-        left: -1.8em;
-    }
-
-
-
-    p{
-        background: none;
-        font-size: 28px;
-        font-weight: 900;
-        font-family: 'Courier New', Courier, monospace;
-        color: gold;
-    }
-
-
-    a{
-        translate: -30px;
-        text-decoration: none;
-        margin: 0% 2%;
-        font-weight: 900;
-        font-size: 22px;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        color: rgb(246, 207, 110);
-    }
-
-    a:active{
-        translate: -30px;
-        text-decoration: none;
-        margin: 0% 3%;
-        font-weight: 900;
-        font-size: 27px;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        color: rgb(247, 10, 10);
-    }
-    main{
-        text-align: center;
-    }
-
-    h1{
-        margin: auto;
-    }
-
-    .txt1{
-        color: gold;
-        font-size: 20px;
-        font-weight: 100;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        text-align: right;
-    }
-
-
-    .txt2{
-        color: rgb(246, 207, 110);
-        font-size: 35px;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        text-align: right;
-    }
-
-    .h2{
-        border-top: dashed;
-    }
-
-    h2{
-        text-align: center;
-        padding: .5em;
-        border-bottom: dashed;
-        color: wheat;
-        font-size: 12px;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    }
-
-
-    footer{
-        translate: 0 380px;
-        background: none;
-        text-align: center;
-        font-size: 22px;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-weight: 600;
-        color: tomato;
+    .main{
+        display: flexbox;
+        justify-content: center;
+        align-items: center;
     }
 
 </style>
+
 <body>
-    <menu>
-        <img src="TLY24 png.png" alt="" width="120px">
-        <a href="https://hellafi1992.github.io/tly2024/">حـــول</a>
-        <a href="https://pancakeswap.finance/?outputCurrency=0x86D29104ea2C78cB124443dd21A664c712525C13">تـــداول</a>
-        <a href="https://hellafi1992.github.io/c777/">الــرئيسية</a>
-    </menu>
-
-    
-    <br>
-
-
-        <main>
-            <h1 class="txt1">تداول مع العملة </h1>
-            <h1 class="txt2">TLY24 / BNB</h1>
-            <br>
-            <br>
-            <h2>عملة جديدة اشتري وحافظ عليها  TLY24  اذا كنت ترغب في التداول اليك عملة</h2>
-            <h2>تابع اخبار الصفحة كل 9ساعات يتم تحديثها تلقائية</h2>
-        </main>
-
-
-        <footer>TLY24 &copy; 2024</footer>
+    <div class="logo"><img src="TLY24 png.png" alt="" width="120px"></div>
+    <menu>TLY24</menu>
+    <div class="main">
+        <blockquote class="twitter-tweet"><p lang="qme" dir="ltr"><a href="https://twitter.com/hashtag/TLY24?src=hash&amp;ref_src=twsrc%5Etfw">#TLY24</a> <a href="https://t.co/nDeBFyegJT">pic.twitter.com/nDeBFyegJT</a></p>&mdash; TUBROK 2024 (@Tubrok2024) <a href="https://twitter.com/Tubrok2024/status/1874083146263912573?ref_src=twsrc%5Etfw">December 31, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <blockquote class="twitter-tweet"><p lang="qme" dir="ltr"><a href="https://twitter.com/hashtag/TLY24?src=hash&amp;ref_src=twsrc%5Etfw">#TLY24</a> <a href="https://t.co/nDeBFyegJT">pic.twitter.com/nDeBFyegJT</a></p>&mdash; TUBROK 2024 (@Tubrok2024) <a href="https://twitter.com/Tubrok2024/status/1874083146263912573?ref_src=twsrc%5Etfw">December 31, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        /*مزيد*/
+    </div>
 </body>
 </html>
