--- a/index.html
+++ b/index.html
@@ -3,50 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>حمد اللافي</title>
+    <title>X_TLY24</title>
 </head>
-
 
 <style>
 
     body{
-        background: #333;
-    }
-
-
-    menu{
-        color: violet;
-        font-size: 40px;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        translate: -20px -30px;
-        background: none;
+        background: linear-gradient(-390deg, silver, rgb(32, 9, 9), black);
         text-align: center;
     }
+    
 
-    .logo{
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    h1{
+        color: violet;
+        font-family: sans-serif;
+        animation: h1 3s linear infinite;
     }
 
-
-    .main{
-        display: flexbox;
-        justify-content: center;
-        align-items: center;
+    @keyframes h1{
+        from{
+            filter: hue-rotate(90deg);
+        }
     }
+
+    menu{
+        translate: -18px;
+    }
+
 
 </style>
 
+
 <body>
-    <div class="logo"><img src="TLY24 png.png" alt="" width="120px"></div>
-    <menu>TLY24</menu>
-    <div class="main">
+    <img src="TLY24 png.png" alt="" width="120px">
+    <h1>TLY24</h1>
+    <menu>
         <blockquote class="twitter-tweet"><p lang="ar" dir="rtl">VS TLY24 اغتنم الفرصة هيا صعود جيد <a href="https://t.co/6mtBZxK8pq">pic.twitter.com/6mtBZxK8pq</a></p>&mdash; TUBROK 2024 (@Tubrok2024) <a href="https://twitter.com/Tubrok2024/status/1873582692115399073?ref_src=twsrc%5Etfw">December 30, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <blockquote class="twitter-tweet"><p lang="zxx" dir="ltr"><a href="https://t.co/i5nqiL4LWA">https://t.co/i5nqiL4LWA</a> <a href="https://t.co/aYwOkL5bbl">pic.twitter.com/aYwOkL5bbl</a></p>&mdash; TUBROK 2024 (@Tubrok2024) <a href="https://twitter.com/Tubrok2024/status/1873795051882713434?ref_src=twsrc%5Etfw">December 30, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <blockquote class="twitter-tweet"><p lang="qme" dir="ltr"><a href="https://twitter.com/hashtag/TLY24?src=hash&amp;ref_src=twsrc%5Etfw">#TLY24</a> <a href="https://t.co/nDeBFyegJT">pic.twitter.com/nDeBFyegJT</a></p>&mdash; TUBROK 2024 (@Tubrok2024) <a href="https://twitter.com/Tubrok2024/status/1874083146263912573?ref_src=twsrc%5Etfw">December 31, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <blockquote class="twitter-tweet"><p lang="qme" dir="ltr"><a href="https://twitter.com/hashtag/TLY24?src=hash&amp;ref_src=twsrc%5Etfw">#TLY24</a> <a href="https://t.co/nDeBFyegJT">pic.twitter.com/nDeBFyegJT</a></p>&mdash; TUBROK 2024 (@Tubrok2024) <a href="https://twitter.com/Tubrok2024/status/1874083146263912573?ref_src=twsrc%5Etfw">December 31, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        /*مزيد*/
-    </div>
+        <blockquote class="twitter-tweet"><p lang="und" dir="ltr">&quot;TLY24&quot; <a href="https://t.co/FD8YnuJCrQ">pic.twitter.com/FD8YnuJCrQ</a></p>&mdash; TUBROK 2024 (@Tubrok2024) <a href="https://twitter.com/Tubrok2024/status/1873575126018699517?ref_src=twsrc%5Etfw">December 30, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Repost the news 😍 <a href="https://t.co/2SE92xeVYV">pic.twitter.com/2SE92xeVYV</a></p>&mdash; TUBROK 2024 (@Tubrok2024) <a href="https://twitter.com/Tubrok2024/status/1873563228909002903?ref_src=twsrc%5Etfw">December 30, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</menu>
 </body>
 </html>
